# search_algos

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac  libsearch_algos.pc.in
include/: binary_search.h  search_algos.h
src/: Makefile.am  binary_search.cpp  libsearch_algos.pc.in  tree_search.cpp
test/: Makefile.am  test_search.cpp
tests/: Makefile.am  test_binary_search.cpp  test_search.cpp  test_search_iterator.cpp  test_tree_search.cpp
